// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@radio: matches snapshot active 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#DDE1EB",
          "borderRadius": 30,
          "height": 60,
          "opacity": undefined,
          "position": "absolute",
          "width": 60,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#8992A3",
          "borderRadius": 18,
          "borderWidth": 2,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
  </View>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot active checked 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  checked={true}
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#DDE1EB",
          "borderRadius": 30,
          "height": 60,
          "opacity": undefined,
          "position": "absolute",
          "width": 60,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#2541CC",
          "borderRadius": 18,
          "borderWidth": 2,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#3366FF",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
  </View>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot active checked: checked 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  checked={true}
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "transparent",
          "borderRadius": 30,
          "height": 60,
          "opacity": undefined,
          "position": "absolute",
          "width": 60,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#3366FF",
          "borderRadius": 18,
          "borderWidth": 2,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#3366FF",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
  </View>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot active: default 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "transparent",
          "borderRadius": 30,
          "height": 60,
          "opacity": undefined,
          "position": "absolute",
          "width": 60,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#A6AEBD",
          "borderRadius": 18,
          "borderWidth": 2,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
  </View>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot checked 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  checked={true}
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "transparent",
          "borderRadius": 30,
          "height": 60,
          "opacity": undefined,
          "position": "absolute",
          "width": 60,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#3366FF",
          "borderRadius": 18,
          "borderWidth": 2,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#3366FF",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
  </View>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot checked disabled 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  checked={true}
  disabled={true}
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "transparent",
          "borderRadius": 30,
          "height": 60,
          "opacity": undefined,
          "position": "absolute",
          "width": 60,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#DDE1EB",
          "borderRadius": 18,
          "borderWidth": 2,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#A6AEBD",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
  </View>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot default 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "transparent",
          "borderRadius": 30,
          "height": 60,
          "opacity": undefined,
          "position": "absolute",
          "width": 60,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#A6AEBD",
          "borderRadius": 18,
          "borderWidth": 2,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
  </View>
</TouchableOpacity>
`;

exports[`@radio: matches snapshot disabled 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  disabled={true}
  dispatch={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-primary": "#3366FF",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "transparent",
          "borderRadius": 30,
          "height": 60,
          "opacity": undefined,
          "position": "absolute",
          "width": 60,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#DDE1EB",
          "borderRadius": 18,
          "borderWidth": 2,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
  </View>
</TouchableOpacity>
`;
